# exporter

./: .env  .gitignore  BR sugestion on concise construction.md  README.md  dotenv-example  dpd exporter.ipynb  dpd exporter_gambhiro.ipynb  dpd-exporter.py  exporter errorlog.txt  exporter.ipynb  exporter.py  generate_html_and_json.py  generate_html_and_json_sbs.py  generate_html_and_json_test.py  helpers.py  html_components.py  mdict converter.py  pyproject.toml  setup.cfg  timeis.py  timeis_rich.py  tpp exporter light.py  tpp exporter.py  tpp exporter2.py  tpr exporter.py  word.py
assets/: .~lock.abbreviations.csv#  .~lock.help.csv#  abbreviations.csv  buttons-test.js  buttons.js  dpd-grammar.css  dpd-help.css  dpd-roots.css  dpd-words.css  dps-help.css  dps-words.css  epd.css  epd_ru.css  freq.css  help.css  help.csv  rpd.css  sandhi.css  tpp light.css  tpp-epd.css  tpp-roots light.css  tpp-roots.css  tpp-sandhi light.css  tpp.css  tpp2.css  words-dps.css  words-sbs.css  words-test.css
assets/templates/: abbreviation-dps.html  abbreviation-sbs.html  feedback-dps.html  feedback.html  lib.mako  link-dps.mako  word-dps.html  word-sbs.html
assets_sbs/: abbreviations.csv  buttons.js  dps-help.css  dps-words.css  epd.css  help.csv  sbs-words.css
assets_sbs/templates/: feedback.html  header.html
assets_test/: abbreviations.csv  epd.css  help.csv  test-help.css  test-words.css
assets_test/templates/: feedback.html
examples/: sbs-pd.csv
examples/spreadsheets/: dps-full.csv
writemdict/: writemdict.py
